# SimpleChessEngine

./: .gitignore  CMakeLists.txt  README.md
src/: Makefile  main.cpp  tests.cpp
